# discord_bot_example

./: .gitignore  README.md
bot_testing/: Cargo.toml
bot_testing/src/: lib.rs  types.rs
discord_api/: Cargo.toml
discord_api/src/: gateway_api.rs  http_api.rs  lib.rs  types.rs
discord_api_runner/: Cargo.toml
discord_api_runner/src/: lib.rs
my_bot/: Cargo.toml
my_bot/src/: lib.rs
pkg/: manifest.json  metadata.json
